# dust

cli/: .gitignore  README.md  pyproject.toml
cli/dust_cli/: __version__.py  argparse_utils.py  request_helper.py  response_parsers.py
cli/dust_cli/endpoints/: __init__.py  create_conversation.py  create_message.py  get_conversation.py  get_conversation_events.py  list_assistants.py
cli/scripts/: cli.py  logger_config.py
cli/scripts/endpoints/: __init__.py  create_conversation.py  create_message.py  get_conversation.py  list_assistants.py
cli/scripts/subcommands/: __init__.py  chat.py  create_conversation.py  create_message.py  get_conversation.py  list_assistants.py
connectors/: package-lock.json  package.json
connectors/migrations/: 20241229_confluence_count_pages.ts  20250110_backfill_provider_visibility.ts
connectors/src/: start.ts  start_worker.ts
connectors/src/admin/: db.ts
connectors/src/api/: get_connector.ts
connectors/src/connectors/: config.ts  index.ts
connectors/src/lib/: data_sources.ts  nango_helpers.ts
core/src/providers/: anthropic.rs  llm.rs
core/src/stores/: postgres.rs  store.rs
extension/app/: background.ts
front/: package-lock.json  package.json
front/components/: ConnectorPermissionsTree.tsx
front/components/assistant/: AssistantDetails.tsx  AssistantPicker.tsx
front/components/sparkle/: AppLayout.tsx
front/lib/: auth.ts  connector_providers.ts  registry.ts
front/pages/: _app.tsx  index.tsx
front/public/: swagger.json
sparkle/: package-lock.json  package.json  tailwind.config.js
types/src/: index.ts
(+77 files in other folders)
